[package]
name = "rust-scratch"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]

[dependencies]
bitflags = "*"
libc = "*"
serde = "*"
lazy_static = "*"
rand = "*"
log = "*"
image = "*"
regex-syntax = "*"
num-traits = "*"
thread_local = "*"
memchr = "*"
regex = "*"
aho-corasick = "*"
unicode-xid = "*"
utf8-ranges = "*"
gcc = "*"
winapi = "*"
syn = "*"
serde_json = "*"
rustc-serialize = "*"
winapi-build = "*"
quote = "*"
kernel32-sys = "*"
byteorder = "*"
num_cpus = "*"
toml = "*"
itoa = "*"
url = "*"
dtoa = "*"
time = "*"
serde_derive = "*"
cfg-if = "*"
num-integer = "*"
unicode-bidi = "*"
void = "*"
matches = "*"
num-iter = "*"
env_logger = "*"
unicode-normalization = "*"
pkg-config = "*"
thread-id = "*"
semver = "*"
num = "*"
idna = "*"
synom = "*"
unreachable = "*"
strsim = "*"
serde_derive_internals = "*"
unicode-segmentation = "*"
clap = "*"
openssl-sys = "*"
ansi_term = "*"
vec_map = "*"
unicode-width = "*"
error-chain = "*"
term_size = "*"
percent-encoding = "*"
term = "*"
net2 = "*"
base64 = "*"
futures = "*"
openssl = "*"
tempdir = "*"
atty = "*"
mime = "*"
backtrace = "*"
num-rational = "*"
hyper = "*"
unicase = "*"
chrono = "*"
rustc-demangle = "*"
httparse = "*"
rustc_version = "*"
num-bigint = "*"
getopts = "*"
num-complex = "*"
backtrace-sys = "*"
language-tags = "*"
syntex_syntax = "*"
foreign-types = "*"
semver-parser = "*"
traitobject = "*"
libz-sys = "*"
syntex_pos = "*"
syntex_errors = "*"
crossbeam = "*"
crossbeam-channel = "*"
scoped-tls = "*"
textwrap = "*"
flate2 = "*"
either = "*"
miniz-sys = "*"
docopt = "*"
cmake = "*"
slab = "*"
typeable = "*"
glob = "*"
miow = "*"
walkdir = "*"
mio = "*"
curl-sys = "*"
uuid = "*"
bytes = "*"
smallvec = "*"
rayon = "*"
curl = "*"
fnv = "*"
iovec = "*"
git2 = "*"
itertools = "*"
coco = "*"
reqwest = "*"
quick-xml = "*"
argon2rs = "*"
